天子终版+乡长

--- a/HinanawiTenshi/Localization/LangSystemDB.csv
+++ b/HinanawiTenshi/Localization/LangSystemDB.csv
@@ -1,4 +1,4 @@
-﻿Key,Type,Desc,Korean,English,Japanese,Chinese,Chinese-TW [zh-tw]
+Key,Type,Desc,Korean,English,Japanese,Chinese,Chinese-TW [zh-tw]
 BattleDia/Boss_Tenshi/Text1,Text,,,,,哦呀，居然还有人能顺利到达这里。,
 BattleDia/Boss_Tenshi/Text2,Text,,,,,正好！吾在这里停留得也有些闷了。,
 BattleDia/Boss_Tenshi/Text3,Text,,,,,就用你们来解解闷吧！,
