--- a/Yuyuko/Localization/LangSystemDB.csv
+++ b/Yuyuko/Localization/LangSystemDB.csv
@@ -1,7 +1,25 @@
 Key,Type,Desc,Korean,English,Japanese,Chinese,Chinese-TW [zh-tw]
-S_YuyukoF_0_1/Text,Text,,,,,回合开始时，降低10%最大体力值。,
+S_YuyukoF_0_1/Text,Text,,,,,结算时降低10%最大体力值。,
 S_YuyukoF_0_2/Text,Text,,,,,可以无视嘲讽状态被选中。,
+S_YuyukoF_1_1/Text,Text,,,,,受到的非<color=purple>痛苦伤害</color>转化为降低等量的最大体力值。,
+S_YuyukoF_1_2/Text,Text,,,,,受到的<color=purple>痛苦伤害</color>转化为降低等量的最大体力值。,
+S_YuyukoF_2_1/Text,Text,,,,,施加时，触发1次<color=#CAE1FF>亡者召还1</color>。<color=#8B008B>回引</color>时，触发1次<color=#CAE1FF>亡者召还1</color>。,
+S_YuyukoF_2_2/Text,Text,,,,,施加时，获得8点<color=#E066FF>亡魂</color>。<color=#8B008B>回引</color>时，获得8点<color=#E066FF>亡魂</color>。,
+S_YuyukoF_3_1/Text,Text,,,,,施加时，选择手中1个技能放逐，抽取1个技能。,
+S_YuyukoF_3_2/Text,Text,,,,,施加时，选择手中1个技能放逐，抽取1个技能。,
+S_YuyukoF_4_1/Text,Text,,,,,<color=#8B008B>回引</color>时，造成&a的伤害(&user攻击力的135%)。,
+S_YuyukoF_4_2/Text,Text,,,,,<color=#8B008B>回引</color>时，(100%干扰成功率)眩晕1回合。,
+S_YuyukoF_5_1/Text,Text,,,,,施加时，触发1次<color=#CAE1FF>亡者召还2</color>。,
+S_YuyukoF_5_2/Text,Text,,,,,<color=#8B008B>回引</color>时，抽取2个技能。,
+S_YuyukoF_6_1/Text,Text,,,,,<color=#8B008B>回引</color>时，在手中生成1个“樱符「完全墨染的樱花」”。,
+S_YuyukoF_6_2/Text,Text,,,,,<color=#8B008B>回引</color>时，在手中生成1个“樱符「完全墨染的樱花」”。,
+S_YuyukoF_7_1/Text,Text,,,,,施加时，抽取1个技能。,
+S_YuyukoF_7_2/Text,Text,,,,,施加时，恢复1点法力值。,
 S_YuyukoF_P_1_1/Text,Text,,,,,"
 <i><color=red>场上已经有<color=#4876FF>幽冥蝶</color>了。</color></i>",
 S_YuyukoF_P_1_2/Text,Text,,,,,"
 <i><color=red>场上已经有<color=#FF69B4>人魂蝶</color>了。</color></i>",
+S_YuyukoF_Rare_1,Text,,,,,「反魂蝶 - ,
+S_YuyukoF_Rare_1_0,Text,,,,,分咲」,
+S_YuyukoF_Rare_1_1/Text,Text,,,,,无效果。,
+S_YuyukoF_Rare_1_2/Text,Text,,,,,无效果。,
