--- a/Yuyuko/Localization/LangSystemDB.csv
+++ b/Yuyuko/Localization/LangSystemDB.csv
@@ -23,4 +23,5 @@ S_YuyukoF_Rare_1,Text,,,,,「反魂蝶 - ,
 S_YuyukoF_Rare_1_0,Text,,,,,分咲」,
 S_YuyukoF_Rare_1_1/Text,Text,,,,,施加时，触发1次<color=#CAE1FF>亡者召还2</color>。,
 S_YuyukoF_Rare_1_2/Text,Text,,,,,施加时，触发1次<color=#CAE1FF>亡者召还3</color>。,
-exceptSkillSelect,Text,,,,,选择要放逐的技能,
+exceptSkill,Text,,,,,选择手中的1个技能放逐。,
+exceptSkillSelect,Text,,,,,选择1个放逐牌库中的技能拿回手中。,
