--- a/Yuyuko/Localization/LangSystemDB.csv
+++ b/Yuyuko/Localization/LangSystemDB.csv
@@ -1,27 +1,43 @@
-Key,Type,Desc,Korean,English,Japanese,Chinese,Chinese-TW [zh-tw]
-S_YuyukoF_0_1/Text,Text,,,,,结算时降低10%最大体力值<color=#FF7A33>(不超过&user攻击力的500%)</color>。,
-S_YuyukoF_0_2/Text,Text,,,,,可以无视嘲讽状态被选中。,
-S_YuyukoF_1_1/Text,Text,,,,,受到的非<color=purple>痛苦伤害</color>转化为降低等量的最大体力值。,
-S_YuyukoF_1_2/Text,Text,,,,,受到的<color=purple>痛苦伤害</color>转化为降低等量的最大体力值。,
-S_YuyukoF_2_1/Text,Text,,,,,施加时，触发1次<color=#CAE1FF>亡者召还1</color>。<color=#8B008B>回引</color>时，触发1次<color=#CAE1FF>亡者召还1</color>。,
-S_YuyukoF_2_2/Text,Text,,,,,施加时，获得8点<color=#E066FF>亡魂</color>。<color=#8B008B>回引</color>时，获得8点<color=#E066FF>亡魂</color>。,
-S_YuyukoF_3_1/Text,Text,,,,,施加时，选择手中1个技能放逐，抽取1个技能。,
-S_YuyukoF_3_2/Text,Text,,,,,施加时，选择手中1个技能放逐，抽取1个技能。,
-S_YuyukoF_4_1/Text,Text,,,,,<color=#8B008B>回引</color>时，造成&a的伤害(&user攻击力的135%)。,
-S_YuyukoF_4_2/Text,Text,,,,,施加时，使所有调查员的固定能力变为可用状态。,
-S_YuyukoF_5_1/Text,Text,,,,,施加时，触发1次<color=#CAE1FF>亡者召还2</color>。,
-S_YuyukoF_5_2/Text,Text,,,,,<color=#8B008B>回引</color>时，抽取2个技能。,
-S_YuyukoF_6_1/Text,Text,,,,,<color=#8B008B>回引</color>时，在手中生成1个“樱符「完全墨染的樱花」”。,
-S_YuyukoF_6_2/Text,Text,,,,,<color=#8B008B>回引</color>时，在手中生成1个“樱符「完全墨染的樱花」”。,
-S_YuyukoF_7_1/Text,Text,,,,,施加时，抽取1个技能，恢复1点法力值。,
-S_YuyukoF_7_2/Text,Text,,,,,施加时，眩晕（<sprite=2>100%）1回合。,
-S_YuyukoF_P_1_1/Text,Text,,,,,"
-<i><color=red>场上已经有<color=#4876FF>幽冥蝶</color>了。</color></i>",
-S_YuyukoF_P_1_2/Text,Text,,,,,"
-<i><color=red>场上已经有<color=#FF69B4>人魂蝶</color>了。</color></i>",
-S_YuyukoF_Rare_1,Text,,,,,「反魂蝶 - ,
-S_YuyukoF_Rare_1_0,Text,,,,,分咲」,
-S_YuyukoF_Rare_1_1/Text,Text,,,,,施加时，触发1次<color=#CAE1FF>亡者召还2</color>。,
-S_YuyukoF_Rare_1_2/Text,Text,,,,,施加时，触发1次<color=#CAE1FF>亡者召还3</color>。,
-exceptSkill,Text,,,,,选择手中的1个技能放逐。,
-exceptSkillSelect,Text,,,,,选择1个放逐牌库中的技能拿回手中。,
+﻿Key,Type,Desc,Korean,English,Japanese,Chinese,Chinese
+BattleDia/FYoumuBattleStart/Text1,Text,,너는... 인간이구나. 마침 잘 왔어!,You are... a human. Perfect timing!,你是，人类呢。来得正好！,你是，人类呢。来得正好！,你是，人类呢。来得正好！
+BattleDia/FYoumuBattleStart/Text2,Text,,네 손에 있는 봄을 모두 내놔!,Hand over all the spring you hold in your hands!,把你手中的那一点春，全部都交出来！,把你手中的那一点春，全部都交出来！,把你手中的那一点春，全部都交出来！
+BattleDia/FYoumuBattleStart/Text3,Text,,너희들이 유유코 님을 막으려는 인간들이지?,"You're the humans trying to stop Lady Yuyuko, aren't you?",你们就是想要阻止幽幽子大人的人类吧！,你们就是想要阻止幽幽子大人的人类吧！,你们就是想要阻止幽幽子大人的人类吧！
+BattleDia/FYoumuBattleStart/Text4,Text,,더 이상 너희를 지나가게 두지 않을 거야!,I won't let you go any further!,我不会让你们继续通过的！,我不会让你们继续通过的！,我不会让你们继续通过的！
+BattleDia/FYoumuBattleStart/Text5,Text,,그녀의 목소리... 외모...,Her voice... her appearance...,她的声音…长相…,她的声音…长相…,她的声音…长相…
+BattleDia/FYoumuBattleStart/Text6,Text,,왜 이 사람을 보면 이상한 느낌이 드는 걸까...,Why do I feel something strange when I see this person...,为什么我看到这家伙，会有种奇怪的感觉…,为什么我看到这家伙，会有种奇怪的感觉…,为什么我看到这家伙，会有种奇怪的感觉…
+BattleDia/FYoumuBattleStart/Text7,Text,,"설마, 이 사람은...","No way, this person...",怎么可能，这个人…,怎么可能，这个人…,怎么可能，这个人…
+BattleDia/FYoumuBattleStart/Text8,Text,,이 사람은... 바로 "나"야...,This person... is "me"...,这个人…就是“我”…,这个人…就是“我”…,这个人…就是“我”…
+S_YuyukoF_0_1/Text,Text,,해결 시 최대 체력을 10% 감소시킵니다 <color=#FF7A33>(&user의 공격력의 500%를 초과하지 않음)</color>.,"At resolution, reduces maximum health by 10% <color=#FF7A33>(up to 500% of &user's attack power)</color>.",结算时降低10%最大体力值<color=#FF7A33>(不超过&user攻击力的500%)</color>。,结算时降低10%最大体力值<color=#FF7A33>(不超过&user攻击力的500%)</color>。,结算时降低10%最大体力值<color=#FF7A33>(不超过&user攻击力的500%)</color>。
+S_YuyukoF_0_2/Text,Text,,도발 상태를 무시하고 선택될 수 있습니다.,Can be selected ignoring taunt status.,可以无视嘲讽状态被选中。,可以无视嘲讽状态被选中。,可以无视嘲讽状态被选中。
+S_YuyukoF_1_1/Text,Text,,<color=purple>고통 피해</color>가 아닌 피해는 최대 체력 감소로 전환됩니다.,Non-<color=purple>pain damage</color>聽taken is converted into an equal reduction of maximum health.,受到的非<color=purple>痛苦伤害</color>转化为降低等量的最大体力值。,受到的非<color=purple>痛苦伤害</color>转化为降低等量的最大体力值。,受到的非<color=purple>痛苦伤害</color>转化为降低等量的最大体力值。
+S_YuyukoF_1_2/Text,Text,,<color=purple>고통 피해</color>는 최대 체력 감소로 전환됩니다.,<color=purple>Pain damage</color>聽taken is converted into an equal reduction of maximum health.,受到的<color=purple>痛苦伤害</color>转化为降低等量的最大体力值。,受到的<color=purple>痛苦伤害</color>转化为降低等量的最大体力值。,受到的<color=purple>痛苦伤害</color>转化为降低等量的最大体力值。
+S_YuyukoF_2_1/Text,Text,,적용 시 <color=#CAE1FF>망자 소환 1</color>을 1회 발동합니다. <color=#8B008B>회수</color> 시 <color=#CAE1FF>망자 소환 1</color>을 1회 발동합니다.,"When applied, triggers 1 <color=#CAE1FF>Recall the Dead 1</color>. When <color=#8B008B>recalled</color>, triggers 1 <color=#CAE1FF>Recall the Dead 1</color>.",施加时，触发1次<color=#CAE1FF>亡者召还1</color>。<color=#8B008B>回引</color>时，触发1次<color=#CAE1FF>亡者召还1</color>。,施加时，触发1次<color=#CAE1FF>亡者召还1</color>。<color=#8B008B>回引</color>时，触发1次<color=#CAE1FF>亡者召还1</color>。,施加时，触发1次<color=#CAE1FF>亡者召还1</color>。<color=#8B008B>回引</color>时，触发1次<color=#CAE1FF>亡者召还1</color>。
+S_YuyukoF_2_2/Text,Text,,적용 시 8의 <color=#E066FF>망령</color>을 얻습니다. <color=#8B008B>회수</color> 시 8의 <color=#E066FF>망령</color>을 얻습니다.,"When applied, gains 8 points of <color=#E066FF>Wraith</color>. When <color=#8B008B>recalled</color>, gains 8 points of <color=#E066FF>Wraith</color>.",施加时，获得8点<color=#E066FF>亡魂</color>。<color=#8B008B>回引</color>时，获得8点<color=#E066FF>亡魂</color>。,施加时，获得8点<color=#E066FF>亡魂</color>。<color=#8B008B>回引</color>时，获得8点<color=#E066FF>亡魂</color>。,施加时，获得8点<color=#E066FF>亡魂</color>。<color=#8B008B>回引</color>时，获得8点<color=#E066FF>亡魂</color>。
+S_YuyukoF_3_1/Text,Text,,"적용 시 손에서 1개의 스킬을 추방하고, 1개의 스킬을 드로우합니다.","When applied, Excludes 1 skill from hand and draws 1 skill.",施加时，选择手中1个技能放逐，抽取1个技能。,施加时，选择手中1个技能放逐，抽取1个技能。,施加时，选择手中1个技能放逐，抽取1个技能。
+S_YuyukoF_3_2/Text,Text,,"적용 시 손에서 1개의 스킬을 추방하고, 1개의 스킬을 드로우합니다.","When applied, Excludes 1 skill from hand and draws 1 skill.",施加时，选择手中1个技能放逐，抽取1个技能。,施加时，选择手中1个技能放逐，抽取1个技能。,施加时，选择手中1个技能放逐，抽取1个技能。
+S_YuyukoF_4_1/Text,Text,,<color=#8B008B>회수</color> 시 &a의 피해를 입힙니다 (<color=#FF7A33>&user의 공격력의 135%</color>).,"When <color=#8B008B>recalled</color>, deals &a damage (<color=#FF7A33>135% of &user's attack power</color>).",<color=#8B008B>回引</color>时，造成&a的伤害(&user攻击力的135%)。,<color=#8B008B>回引</color>时，造成&a的伤害(&user攻击力的135%)。,<color=#8B008B>回引</color>时，造成&a的伤害(&user攻击力的135%)。
+S_YuyukoF_4_2/Text,Text,,적용 시 모든 조사원의 고정 능력을 사용 가능 상태로 만듭니다.,"When applied, makes all investigators' fixed abilities available.",施加时，使所有调查员的固定能力变为可用状态。,施加时，使所有调查员的固定能力变为可用状态。,施加时，使所有调查员的固定能力变为可用状态。
+S_YuyukoF_5_1/Text,Text,,적용 시 <color=#CAE1FF>망자 소환 2</color>을 1회 발동합니다.,"When applied, triggers 1 <color=#CAE1FF>Recall the Dead 2</color>.",施加时，触发1次<color=#CAE1FF>亡者召还2</color>。,施加时，触发1次<color=#CAE1FF>亡者召还2</color>。,施加时，触发1次<color=#CAE1FF>亡者召还2</color>。
+S_YuyukoF_5_2/Text,Text,,<color=#8B008B>회수</color> 시 2개의 스킬을 드로우합니다.,"When <color=#8B008B>recalled</color>, draws 2 skills.",<color=#8B008B>回引</color>时，抽取2个技能。,<color=#8B008B>回引</color>时，抽取2个技能。,<color=#8B008B>回引</color>时，抽取2个技能。
+S_YuyukoF_6_1/Text,Text,,<color=#8B008B>회수</color> 시 손에 "벚부 '완전히 먹물 든 벚꽃'" 1개를 생성합니다.,"When <color=#8B008B>recalled</color>, generates 1 ""Cherry Blossom Sign 'Fully Ink-Stained Cherry Blossoms'"" in hand.",<color=#8B008B>回引</color>时，在手中生成1个“樱符「完全墨染的樱花」”。,<color=#8B008B>回引</color>时，在手中生成1个“樱符「完全墨染的樱花」”。,<color=#8B008B>回引</color>时，在手中生成1个“樱符「完全墨染的樱花」”。
+S_YuyukoF_6_2/Text,Text,,<color=#8B008B>회수</color> 시 손에 "벚부 '완전히 먹물 든 벚꽃'" 1개를 생성합니다.,"When <color=#8B008B>recalled</color>, generates 1 ""Cherry Blossom Sign 'Fully Ink-Stained Cherry Blossoms'"" in hand.",<color=#8B008B>回引</color>时，在手中生成1个“樱符「完全墨染的樱花」”。,<color=#8B008B>回引</color>时，在手中生成1个“樱符「完全墨染的樱花」”。,<color=#8B008B>回引</color>时，在手中生成1个“樱符「完全墨染的樱花」”。
+S_YuyukoF_7_1/Text,Text,,"적용 시 1개의 스킬을 드로우하고, 1의 마나를 회복합니다.","When applied, draws 1 skill and restores 1 mana.",施加时，抽取1个技能，恢复1点法力值。,施加时，抽取1个技能，恢复1点法力值。,施加时，抽取1个技能，恢复1点法力值。
+S_YuyukoF_7_2/Text,Text,,적용 시 1턴 동안 기절 (<sprite=2>100%) 상태로 만듭니다.,"When applied, stuns (<sprite=2>100%) for 1 turn.",施加时，眩晕（<sprite=2>100%）1回合。,施加时，眩晕（<sprite=2>100%）1回合。,施加时，眩晕（<sprite=2>100%）1回合。
+S_YuyukoF_P_1_1/Text,Text,,"
+<i><color=red>필드에 이미 <color=#4876FF>명계 나비</color>가 있습니다.</color></i>","
+<i><color=red>There is already a <color=#4876FF>Netherworld Butterfly</color> on the field.</color></i>","
+<i><color=red>场上已经有<color=#4876FF>幽冥蝶</color>了。</color></i>","
+<i><color=red>场上已经有<color=#4876FF>幽冥蝶</color>了。</color></i>","
+<i><color=red>场上已经有<color=#4876FF>幽冥蝶</color>了。</color></i>"
+S_YuyukoF_P_1_2/Text,Text,,"
+<i><color=red>필드에 이미 <color=#FF69B4>인혼 나비</color>가 있습니다.</color></i>","
+<i><color=red>There is already a <color=#FF69B4>Human Soul Butterfly</color> on the field.</color></i>","
+<i><color=red>场上已经有<color=#FF69B4>人魂蝶</color>了。</color></i>","
+<i><color=red>场上已经有<color=#FF69B4>人魂蝶</color>了。</color></i>","
+<i><color=red>场上已经有<color=#FF69B4>人魂蝶</color>了。</color></i>"
+S_YuyukoF_Rare_1,Text,,「反魂蝶 - ,「反魂蝶 - ,「反魂蝶 - ,「反魂蝶 - ,「反魂蝶 - 
+S_YuyukoF_Rare_1_0,Text,,分咲」,分咲」,分咲」,分咲」,分咲」
+S_YuyukoF_Rare_1_1/Text,Text,,적용 시 <color=#CAE1FF>망자 소환 2</color>을 1회 발동합니다.,"When applied, triggers 1 <color=#CAE1FF>Recall the Dead 2</color>.",施加时，触发1次<color=#CAE1FF>亡者召还2</color>。,施加时，触发1次<color=#CAE1FF>亡者召还2</color>。,施加时，触发1次<color=#CAE1FF>亡者召还2</color>。
+S_YuyukoF_Rare_1_2/Text,Text,,적용 시 <color=#CAE1FF>망자 소환 3</color>을 1회 발동합니다.,"When applied, triggers 1 <color=#CAE1FF>Recall the Dead 3</color>.",施加时，触发1次<color=#CAE1FF>亡者召还3</color>。,施加时，触发1次<color=#CAE1FF>亡者召还3</color>。,施加时，触发1次<color=#CAE1FF>亡者召还3</color>。
+exceptSkill,Text,,손에서 1개의 스킬을 추방합니다.,Excludes 1 skill from hand.,选择手中的1个技能放逐。,选择手中的1个技能放逐。,选择手中的1个技能放逐。
+exceptSkillSelect,Text,,추방 덱에서 1개의 스킬을 손으로 가져옵니다.,Retrieves 1 skill from the Exclude deck to hand.,选择1个放逐牌库中的技能拿回手中。,选择1个放逐牌库中的技能拿回手中。,选择1个放逐牌库中的技能拿回手中。
